--- a/index.css
+++ b/index.css
@@ -1,9 +1,8 @@
- . {
-
+ *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
- }
+}
 
 html{
   background: rgb(172, 43, 43);
@@ -18,40 +17,42 @@ html{
   width: 80%;
   border-radius: 20px;
   margin: 60px auto;
-
-  
-  
-
 }
+
 .main-card button{
   padding: 10px;
   background: whitesmoke;
   color: black;
   border-color: black;
 }
+
 .line-1{
   width: 90px;
 }
+
 .one{
   color: white;
   padding: 40px;
-  background: rgb(4, 4, 27);
-  
+  background: rgb(4, 4, 27);  
 }
+
 .first-card{
-  gap: 90px;
   background: rgb(4, 4, 27);
   display: flex;
-
+  justify-content: space-between;
+  align-items: center;
 }
+
 .first-card h1{
   font-size: 3xl;
   font-weight: 800;
 }
+
 .first-card p{
   opacity: 0.6;
   padding-bottom: 40px;
 }
+
 .first-card button{
   padding-top: 10px;
   padding-left: 20px;
@@ -61,18 +62,42 @@ html{
   color: white;
   border-color: white;
 }
-.family{
-  width: 80%;
-  height: 60%;
+
+.family img{
+  width: 30vw;
+  height: 50vh;
+  justify-content: right;
+  object-fit: cover;
 }
+
+.card1 h3{
+  font-weight: 900;
+  margin-bottom: 20px;
+}
+
+.card1 p{
+  font-weight: 600;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.card1{
+  gap: 20px;
+}
+
 .blog{
   display: flex;
-  margin-right: 3px;
+  align-items: center;
   gap: 20px;
   list-style: none;
   cursor: pointer;
-
 }
+
+a{
+  text-decoration: none;
+}
+
 .initial{
   display: flex;
   background: rgb(250, 247, 247);position: relative;
@@ -80,12 +105,14 @@ html{
     justify-content: space-between; 
     padding: 40px;
 }
+
 .initial ul{
   opacity: 0.6;
   display: flex;
   gap: 10px;
   margin-left: 20px;
 }
+
 .initial button{
   border-color: rgb(15, 7, 7);
     padding-top: 10px;
@@ -93,20 +120,34 @@ html{
     padding-right: 20px;
     padding-bottom: 10px;
 }
+
 .line-2{
   width: 90px;
   padding-top: 90px;
   text-align: center;
 }
+
 .second-card{
   padding: 40px;
   background: white;
   text-align: center;
 }
+
 .card2{
   display: flex;
   gap: 40px;
 }
+
+.card21{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.card21 i{
+  font-size: 40px;
+}
+
 .third-card{
   display: flex;
     background: rgb(4, 4, 27);
@@ -133,33 +174,41 @@ html{
   padding-left: 40px;
   padding-right: 40px;
   padding-top: 16px
-
 }
 
-.icons{
-  
+.diff{
+  margin-bottom: 40px;
+  text-align: left;
+  margin-top: 20px;
 }
+
 .last-card{
   padding: 40px;
-  background: white;
-  
+  background: white; 
 }
+
 .last-last{
   display: flex;
   gap: 60px;
+  padding-top: 40px;
 }
+
 .insure{
   display: flex;
   position: relative;
+  padding-bottom: 40px;
     width: 100%;
     align-items: center;
     justify-content: space-between;
-  
-
 }
+
 .icons{
   gap: 90px;
   justify-content: space-between;
+}
+
+.icons i{
+  font-size: 30px;
 }
 
 /*Mobile Media queries*/
@@ -171,7 +220,6 @@ html{
     top: 0;
     right: 0;
     z-index: 1000;
-    
   }
 
   .blog{
@@ -187,17 +235,15 @@ html{
       padding: 20px 12px;
       transition: 50s ease;
       flex-direction: column;
-
   }
-
 
   .first-card{
   display: flex;
   flex-direction: column-reverse;
   justify-content: center;
   width: 80%;
-
 }
+
 .family{
   width: 80%;
 }
@@ -206,28 +252,28 @@ html{
   display: block;
   flex-direction: column-reverse;
   justify-content: center;
-
 }
+
 .third-card{
   display: block;
   flex-direction: column-reverse;
 }
-.blog{
 
-
-}
 .last-card{
   position: relative;
 }
+
 .card1{
   justify-content: center;
 }
+
 .insure{
   display: block;
   flex-direction: column-reverse;
   justify-content: center;
   text-align: center;
 }
+
 .last-last{
   display: block;
   justify-content: center;
@@ -239,15 +285,10 @@ html{
   flex-direction: column;
   justify-content: center;
   display: block;
-  text-align: center;
-
-  
-  
+  text-align: center; 
 }
   
 }
-
 /*Media queries(Tablet Screen)*/
-@media (min-width:768px) and (max-width:1180px) {
-  
+@media (min-width:768px) and (max-width:1180px) { 
 }
